	- Treat parent profiles before children, see
	  http://bugs.gentoo.org/show_bug.cgi?id=217120
	- Let update-eix first process options like --print.
	  This also fixes script problems with KEEP_VIRTUAL=true.
	  Thanks to tzopik <tzopik at gmail.com> for reporting and
	  investigating. See http://bugs.gentoo.org/show_bug.cgi?id=216972
	- Conversion of all latin1 characters to unicode.

*eix-0.12.3
	Emil Beinroth <emilbeinroth at gmx.net>:
	- Fix sqlite error messages
	- Add SysError exception and use it in database code, so we throw
	  errors and don't hang if there is something wrong with the database.
	- Make io::read_packagetree a little faster by reading the database as
	  categories with packages, not just as a stream of packages.
	  Only do seek in PackageReader::skip() if we didn't read all
	  information.
	- Add support for multiple inheritance in "parent" files of profiles.

	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Avoid scandir(), to allow compilation under Solaris 9. Thanks to
	  Jeremy <jer.gentoo at gmail.com> for the hints, see
	  http://bugs.gentoo.org/show_bug.cgi?id=195411
	- Fix NormalizeNames() of update-eix-function.sh, see
	  http://bugs.gentoo.org/show_bug.cgi?id=215417
	- Fix possible endless loop for cache method metadata and portage-2.1

*eix-0.12.2
	Emil Beinroth <emilbeinroth at gmx.net>:
	- Replace "$@.in" with "$<" in Makefile.am (which gives us the real
	  path, not just the name of the file); Remove configmake.h and add
	  SYSCONFDIR to AM_CXXFLAGS (as mentioned in the autoconf manual);
	  "make distcheck" works again.
	- BasicVersion: Store m_parts as list (avoids reallocation overhead).
	- Version: hold iuse as vector, not as string so we don't need to
	  split/join so much. Join vector only on request and cache result.
	- Package: Do not split/join collected iuse everytime a version is
	  added, instead store a set of useflags in the package, and add the